[package]
name = "unranked-pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
chrono = "0.4.35"
once_cell = "1.19.0"
osu-db = "0.3.0"
rayon = "1.10.0"
rosu-pp = "0.10.0"
tokio = { version = "1.36.0", features = ["full"] }
